--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -90,6 +90,9 @@ a:hover { opacity:.9 }
 .main > .wrapper > .content .street-description .label:before { content:''; position:absolute; top:1px; left:5px; width:42px; height:42px; background:url(../images/icons.png) no-repeat -178px 0 }
 .main > .wrapper > .content .street-description p { clear:left; margin-top:15px; font-size:14px; line-height:20px; }
 .main > .wrapper > .content .street-description strong { color:#FE8369 }
+.main > .wrapper > .content .street-description b { font-weight:600 }
+.main > .wrapper > .content .street-description i,
+.main > .wrapper > .content .street-description em { font-style:italic; }
 .main > .wrapper > .sidebar { float:right; width:360px; }
 .main > .wrapper > .sidebar > .contacts { position:relative; float:left; width:100%; }
 .main > .wrapper > .sidebar > .contacts:before { content:''; position:absolute; top:0; right:0; width:80px; height:80px; background:#FD746C }
